# shipfex

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Cargo.toml
apps/api/src/: main.rs  state.rs
apps/api/src/middleware/: tenant.rs
apps/api/src/routes/: inventory.rs
apps/outbox-publisher/: Cargo.toml
apps/outbox-publisher/src/: main.rs
crates/shipfex-domains/: Cargo.toml
crates/shipfex-domains/src/inventory/: mod.rs  repo.rs  service.rs  types.rs
crates/shipfex-domains/tests/: inbound_put_idempotency.rs
crates/shipfex-platform/: Cargo.toml
crates/shipfex-platform/src/: db.rs  envelope.rs  errors.rs  gs1.rs  lib.rs  outbox.rs
docs/: blueprint.md
migrations/: 001_genesis_schema.sql
src/app/: globals.css  layout.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/app/(marketing)/contact/: page.tsx
src/app/(marketing)/features/: page.tsx
src/app/(marketing)/pricing/: page.tsx
src/app/(marketing)/privacy/: page.tsx
src/app/(marketing)/terms/: page.tsx
src/app/dashboard/: customer-dashboard.tsx  layout.tsx  page.tsx  seller-dashboard.tsx  super-admin-dashboard.tsx  warehouse-manager-dashboard.tsx  worker-dashboard.tsx
src/app/dashboard/analytics/: page.tsx
src/app/dashboard/inbound/: add-asn-modal.tsx  page.tsx
src/app/dashboard/integrations/: connect-integration-modal.tsx  manage-integration-modal.tsx  page.tsx
src/app/dashboard/inventory/: add-product-modal.tsx  page.tsx
src/app/dashboard/orders/: add-order-modal.tsx  page.tsx
src/app/dashboard/returns/: authorize-return-modal.tsx  page.tsx
src/app/dashboard/settings/: page.tsx
src/app/dashboard/shipments/: add-shipment-modal.tsx  page.tsx
src/app/debug/: page.tsx
src/app/role-test/: page.tsx
src/app/storage-test/: page.tsx
src/app/test-login/: page.tsx
src/components/: dashboard-nav.tsx  icons.tsx  page-header.tsx  role-guard.tsx  user-nav.tsx
src/components/layout/: marketing-footer.tsx  marketing-header.tsx
src/lib/: DATABASE_SCHEMA.md  data.ts  export-utils.ts  placeholder-images.json  roles.ts
src/store/: auth.ts
