[package]
name = "shipfex-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shipfex-api"
path = "src/main.rs"

[dependencies]
shipfex-platform = { path = "../../crates/shipfex-platform" }
shipfex-domains = { path = "../../crates/shipfex-domains" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
