[package]
name = "shipfex-outbox-publisher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shipfex-outbox-publisher"
path = "src/main.rs"

[dependencies]
shipfex-platform = { path = "../../crates/shipfex-platform" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rdkafka = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
