[package]
name = "shipfex-domains"
version = "0.1.0"
edition = "2021"

[dependencies]
shipfex-platform = { path = "../../crates/shipfex-platform" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
